--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
-    <link rel="icon" href="./images/OM.png">
+    <link rel="icon" href="OM.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Portfolio</title>
 </head>
 <body class="preload">
@@ -35,7 +35,7 @@
         <div class="nav-bar">
 
             <div class="logo">
-                <a href="#Home"><img src="./images/logo.png" alt="logo"></a>
+                <a href="#Home"><img src="logo.png" alt="logo"></a>
             </div>
 
             <div class="navigation">
@@ -63,8 +63,8 @@
             <div class="home-info">
                 <div class="home-text">
                     <h4><span>Hi,</span> my name is</h4>
-                    <h2>Otar Matchavariani</h2>
-                    <h3>I am a Front-end Developer</h3>
+                    <h2>Sajesan Ghimire</h2>
+                    <h3>I am a Student </h3>
                     <p>
                         Focused on creating amazing UIs 
                         and learning something new every day.
@@ -91,7 +91,7 @@
 
             <div class="video">
                 <video id="animation" width="640" height="360" autoplay loop>
-                    <source src="./videos/animation.mp4" type="video/mp4">
+                    <source src="animation.mp4" type="video/mp4">
                 </video>
             </div>
 
@@ -278,7 +278,7 @@
         </div>
     </footer>
 
-   <script src="./js/main.js"></script>
+   <script src="main.js"></script>
 
 </body>
 </html>
