--- a/index.html
+++ b/index.html
@@ -79,7 +79,36 @@
             </div>
 
             <div class="home-img"></div>
-
+<div id="amg-slideshow-wrap">
+        <input type="radio" id="amg-button_1" name="controls" checked="checked"/>
+        <label for="amg-button_1"></label>
+        <input type="radio" id="amg-button_2" name="controls"/>
+        <label for="amg-button_2"></label>
+        <input type="radio" id="amg-button_3" name="controls"/>
+        <label for="amg-button_3"></label>
+        <input type="radio" id="amg-button_4" name="controls"/>
+        <label for="amg-button_4"></label>
+        <label for="amg-button_1" class="amg-arrow" id="amg-arrow_1">></label>
+        <label for="amg-button_2" class="amg-arrow" id="amg-arrow_2">></label>
+        <label for="amg-button_3" class="amg-arrow" id="amg-arrow_3">></label>
+        <label for="amg-button_4" class="amg-arrow" id="amg-arrow_4">></label>
+        <div id="amg-slideshow">
+            <ul>
+                <li id="amg-slide_1">
+                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/173442/walt-disney-quotes2.jpg" />
+                </li>
+                <li id="amg-slide_2">
+                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/173442/walt-disney-quotes3.jpg" />
+                </li>
+                <li id="amg-slide_3">
+                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/173442/walt-disney-quotes4.jpg" />
+                </li>
+                <li id="amg-slide_4">
+                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/173442/walt-disney-quotes5.jpg" />
+                </li>
+            </ul>
+        </div>
+    </div
         </div>
 
         <a href="#About" class="scroll-down">Scroll Down <i class="fas fa-arrow-down"></i></a>
